--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,16 @@ body {
 }
 
 h1 {
-  color: #ffc0cb;
+  color: #442255;
 }
 
 h2 {
-  color: #ffc0cb (255, 255, 255);
+  color: #442255;
 }
 
 /* HEADER  */
 header {
-  background-color: rgb(207, 134, 146);
+  background-color: #d7b2d8;
   color: whitesmoke;
   display: flex;
   justify-content: space-between;
@@ -45,10 +45,10 @@ header nav ul li a {
 }
 
 /* IMAGEN  */
-body img {
-  width: 60%;
-  max-width: 100%;
-  height: auto;
+.img-galeria {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -62,17 +62,17 @@ main {
   font-style: oblique;
 }
 
-/*  ESTILOS DE TEXTOS EN MAIN */
+/* TEXTOS EN MAIN */
 main h1 {
-  color: rgb(206, 130, 143);
+  color: #442255;
 }
 
 main h3 {
-  color: pink;
+  color: #442255;
 }
 
 main h4 {
-  color: rgb(219, 38, 146);
+  color: #442255;
 }
 
 @keyframes fadeUp {
@@ -109,3 +109,72 @@ main h4 {
 .animar-delay-1 { animation-delay: 0.2s; }
 .animar-delay-2 { animation-delay: 0.4s; }
 .animar-delay-3 { animation-delay: 0.6s; }
+
+/*IMG PRINCIPAL */
+@keyframes imagenFadeZoom {
+  0% {
+    opacity: 0;
+    transform: translateY(40px) scale(0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+
+.img-animada {
+  animation: imagenFadeZoom 1s ease forwards;
+}
+
+/* EFECTO HOVER */
+.img-galeria {
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+
+.img-galeria:hover {
+  transform: scale(1.03);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+}
+
+/* FORMULARIO */
+.btn-pink {
+  background-color: #442255;
+  color: white;
+}
+
+.btn-pink:hover {
+  background-color: #442255;
+  color: white;
+}
+
+/* LOGO */
+.logo-inicio {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.logo-inicio img {
+  width: auto;
+  height: 160px;
+  max-width: 100%;
+}
+
+@media (max-width: 576px) {
+  .logo-inicio img {
+    height: 120px;
+  }
+}
+
+/* estilo del footer */
+footer {
+  background-color: #d7b2d8;
+  padding: 20px 0;
+  color: #442255; /* o blanco si preferís más contraste */
+  text-align: center;
+}
+
+/* h4 de servicio */
+.texto-servicio {
+  color: #85519f; /* Elegí el lila que estás usando en tu paleta */
+  font-weight: bold;
+}
