--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 // VARIABLES
-$rosa-principal: pink;
-$rosa-secundario: rgb(206, 130, 143);
-$rosa-fuerte: rgb(219, 38, 146);
+$lila-principal: #442255;
+$lila-secundario: #85519f;
+$lila-fuerte: #431759;
 $fondo: beige;
 $blanco: whitesmoke;
 $tipografia: Georgia, 'Times New Roman', Times, serif;
@@ -35,17 +35,17 @@ body {
 
 // ENCABEZADOS GENERALES
 h1 {
-  color: $rosa-principal;
+  color: $lila-principal
 }
 
 h2 {
-  color: rgb(255, 255, 255);
+  color: $lila-secundario;
 }
 
 // HEADER
-header {
-  background-color: rgb(207, 134, 146);
-  color: $blanco;
+    header {
+  background-color: $lila-secundario;
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -62,7 +62,7 @@ header {
       li {
         a {
           text-decoration: none;
-          color: $blanco;
+          color: white;
           font-weight: bold;
         }
       }
@@ -80,15 +80,15 @@ main {
   font-style: oblique;
 
   h1 {
-    color: $rosa-secundario;
+    color: $lila-principal;
   }
 
   h3 {
-    color: $rosa-principal;
+    color: $lila-fuerte;
   }
 
   h4 {
-    color: $rosa-fuerte;
+    color: $lila-fuerte;
   }
 }
 
@@ -127,3 +127,97 @@ main {
 .animar-delay-1 { animation-delay: 0.2s; }
 .animar-delay-2 { animation-delay: 0.4s; }
 .animar-delay-3 { animation-delay: 0.6s; }
+
+//Menú hamburguesa
+.header {
+  background-color: #CF8692;
+  padding: 10px 20px;
+  color: #CF8692;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+
+  .logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .menu-toggle {
+    display: none;
+  }
+
+  .hamburger {
+    font-size: 2rem;
+    cursor: pointer;
+    display: none;
+  }
+
+  .nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+
+    li a {
+      color: #ffffff;
+      text-decoration: none;
+
+      &:hover {
+        color: #CF8692;
+      }
+    }
+  }
+
+  // RESPONSIVE
+  @media (max-width: 768px) {
+    .hamburger {
+      display: block;
+    }
+
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #a31770;
+      width: 100%;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    .menu-toggle:checked + .hamburger + .nav-links {
+      display: flex;
+    }
+  }
+}
+
+//LOGO
+.logo-inicio {
+  display: inline-block;
+  margin-bottom: 10px;
+
+  img {
+    height: 160px;
+    width: auto;
+    max-width: 100%;
+  }
+
+  @media (max-width: 576px) {
+    img {
+      height: 120px;
+    }
+  }
+}
+
+//img
+.img-galeria {
+  width: 100%;
+  height: 250px; // Podés ajustar este valor según te guste
+  object-fit: cover;
+  border-radius: 10px;
+}
